
2) Compiler options. 
2.1) For the regular compile, we don't want -g (debug symols)
2.2) We don't need -m64, on a 64bit platform this is default
2.3) Remove $(USER) as it is never defined
2.4) Remove -Warray-bounds, this is default.
2.5) Add -fbacktrace in the commented-out part, it is important for debugging
2.6) Change comment for VPATH, explain what this directive does
2.7) Added some explanation of options as comment.  Maybe expand later.

Notes and questions:
1. Would be nice to have a debug version also for serial code.
2. Would be nice to have "as fast as possible" option (thought it might be machine-dependent ...)
3. What is the purpose of -Warray-bounds ? Is it relevant for Fortran? I think if there is a compile-time array-bound violation this would be a hard error?

* FLEXPART.f90
  ========

Update version string!

* readcommand.f90
  ===========

Correct misleading error message (replace "open" by "write to")
Improve error messages: combine pathname+filename, remove unaligned closing ###
Let STOP say in which subroutine we are stopping
Some minor changes

* verttransform_ecmwf.f90 PS 2018-06-13
  ===================

1) Remove some of commented out testing stuff
2) Fix indenting in the init if block
3) Code layout improvement
4) Change name of loops to represent the index
5) Fix ticket:140 Introduce a new way of establishing the reference position
   for the vertical grid. Also correct a minor bug in the calculation
   of height (array assignment where it was not intended)
6) Add back the SAVE attribute to INIT, just to be sure
7) Bring some more code under the IF (INIT) block
8) make some annotations

* com_mod.f90  PS 2018-06-13
  =======
  
  correct the comment for nmixz

* verttransform_nest.f90 PS 2018-06-17
  ===================
1) insert proper boundaries for implied loops in array expressions
  (fixes bug annoted by ESO in 2016)
2) Code layout improvement
3) Change name of loops to represent the index
4) make some annotations